syntax = "proto3";

option csharp_namespace = "JsonTranscoding";
import "google/api/annotations.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
	  option (google.api.http) = {
		  get: "/v1/greeter/{name}"
	  };
  };

  rpc ProcessMessage(GreetRequest) returns (GreetResponse){
    option (google.api.http) = {
      post: "/v1/greeter",
	  body: "*"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

//POST request
message GreetRequest{
	string name = 1;
	int32 age = 2;
	repeated string categories = 3;
}

message GreetResponse{
	repeated string categories = 1;
	string text = 2;
}